tests/negative/comptime_division_by_zero.ora
contract ComptimeDivisionByZero {
    pub fn run() -> u256 {
        return comptime {
            1 / 0;
        };
    }
}
